--- a/views/pages/nav.ejs
+++ b/views/pages/nav.ejs
@@ -1,7 +1,7 @@
 <nav class="navbar fixed-bottom navbar-expand-sm navbar-dark bg-dark">
     <div style="
     cursor: pointer;
-            
+    
     font-size: 1.5em;
     color: white;
     text-align: center;
@@ -10,11 +10,11 @@
         <p style="
         margin-bottom: 0;
         background: none;
-            	border: none;
-            	font: inherit;
-            	
-            	outline: inherit;">
-            &lt;
+        border: none;
+        font: inherit;
+        
+        outline: inherit;">
+            &#9664;
         </p>
         <p style="font-size: 0.75rem; margin-bottom: 0;">Back</p>
     </div>
@@ -23,11 +23,7 @@
         <img src="https://www.oit.edu/themes/custom/oregontech/images/logo.png" alt="oit logo">
     </a>
 
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <div>
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
                 <a href="home_page" class="nav-link">
@@ -57,7 +53,7 @@
     
     // Adding in some css stuff because I'm unsure if there's a way to add css in what would
     // be the bottom of the page
-    $(document).ready(() =>{
+    $(document).ready(() => {
         $("body").css("padding-bottom", $("nav").outerHeight(true));
         $(".navbar-brand img").css("width", "50%");
     });
