Started on start page / anti-burnin

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -8,6 +8,18 @@
     }
 }
 
+/* Hide scrollbar for Chrome, Safari and Opera */
+body::-webkit-scrollbar {
+    display: none;
+}
+
+body {
+    -ms-overflow-style: none;
+    /* IE and Edge */
+    scrollbar-width: none;
+    /* Firefox */
+}
+
 .major {
     margin: 5px;
     background-color: $oit_blue;
