--- a/views/pages/home_page.ejs
+++ b/views/pages/home_page.ejs
@@ -9,7 +9,9 @@
 </head>
 
 <body>
-    
+    <header>
+
+    </header>
     <table class="container-fluid">
         <div id="page_banner">
             <tr class="row">
