--- a/views/pages/links.ejs
+++ b/views/pages/links.ejs
@@ -11,7 +11,7 @@
     <h1 class="title">Link Page</h1>
     <div>
         <% if (locals.message) { %> <p> <%= message %> </p> <% } %>
-
+        <p><a href="start">Start page</a></p>
         <p><a href="home_page">Home Page</a></p>
         <hr/>
         <p><a href="building_select">Building Selector</a></p>
