--- a/views/pages/start.ejs
+++ b/views/pages/start.ejs
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="scroll">
+    <div class="scroll" id="scroll">
         <div><img src="images/frog1.jpg"></div>
         <div><img src="images/frog2.jpg"></div>
         <div><img src="images/frog3.jpg"></div>
@@ -15,23 +15,6 @@
         <a href="/"><h1 class="click">Tap here to start!</h1></a>
     </footer>
     <%- include("tail") %>
-    <script>
-        function animatethis(targetElement, speed) {
-            $(targetElement).animate({scrollLeft: 0}, {duration: 0, easing: "linear"});
-                var scrollWidth = $(targetElement).get(0).scrollWidth;
-                var clientWidth = $(targetElement).get(0).clientWidth;
-                $(targetElement).animate({ scrollLeft: scrollWidth - clientWidth },
-                {
-                    duration: speed,
-                    easing: "linear",
-                    complete:  () => {
-                        animatethis(targetElement, speed);
-                    }
-                });
-            };
-            $(".scroll").append("<div>" + $($(".scroll").children()[0]).html() + "</div>");
-            animatethis($('.scroll'), 50000);
-
-    </script>
+    <script src="js/start.js"></script>
 </body>
 </html>
