Even better scroll handling

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -130,7 +130,7 @@ html {
     }
     -ms-overflow-style: none;
     // // /* IE and Edge */
-    scrollbar-width: none !important;
+    // scrollbar-width: none !important;
     /* Firefox */
 }
 
