--- a/views/pages/start.ejs
+++ b/views/pages/start.ejs
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="scroll" id="scroll">
+    <div class="scroll">
         <div><img src="images/frog1.jpg"></div>
         <div><img src="images/frog2.jpg"></div>
         <div><img src="images/frog3.jpg"></div>
