One more small thing

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -129,9 +129,9 @@ html {
         display: none;
     }
     -ms-overflow-style: none;
-    // // /* IE and Edge */
+    // IE and Edge
     scrollbar-width: none !important;
-    /* Firefox */
+    // Firefox
 }
 
 .oit-card
