--- a/views/pages/start.ejs
+++ b/views/pages/start.ejs
@@ -7,6 +7,7 @@
 </head>
 <body>
     <div class="scroll">
+        <div><img src="images/Hootie-cutout.png"></div>
         <div><img src="images/frog1.jpg"></div>
         <div><img src="images/frog2.jpg"></div>
         <div><img src="images/frog3.jpg"></div>
