--- a/views/pages/home_page.ejs
+++ b/views/pages/home_page.ejs
@@ -40,7 +40,7 @@
             <!--I know it's sad that Software isn't here but these are the 2019 stats-->
             <td class="col-3 p-1" id="card-img-1">
                 <a href="major?page=Diagnostic Medical Sonography">
-                    <div class="oit-card" id="card-img-1">
+                    <div class="oit-card" id="card-img-1" style="background-image: url('images/Majors/DiagnosticMedicalSonography/optimizedIMG_1705.jpg')">
                         <div class="oit-card-text">
                             <p id="major-1">Diagnostic Medical Sonography & Ultrasound Technician</p>
                         </div>
@@ -49,7 +49,7 @@
             </td>
             <td class="col-3 p-1">
                 <a  href="major?page=Mechanical Engineering">
-                    <div class="oit-card" id="card-img-2">
+                    <div class="oit-card" id="card-img-2" style="background-image: url('images/Majors/MechanicalEngineering/mech-engineering.jpg')">
                         <div class="oit-card-text">
                             <p id="major-2">Mechanical Engineering</p>
                         </div>
@@ -58,7 +58,7 @@
             </td>
             <td class="col-3 p-1">
                 <a href="major?page=Dental Hygiene">
-                    <div class="oit-card" id="card-img-3" href="">
+                    <div class="oit-card" id="card-img-3" style="background-image: url('images/Majors/DentalHygiene/students-with-suzanne.jpg')">
                         <div class="oit-card-text">
                             <p id="major-3">Dental Hygiene</p>
                         </div>
@@ -67,7 +67,7 @@
             </td>
             <td class="col-3 p-1">
                 <a href="major?page=Radiologic Science">
-                    <div class="oit-card" id="card-img-4">
+                    <div class="oit-card" id="card-img-4" style="background-image: url('images/Majors/RadiologicScience/rad-science.jpg')">
                         <div class="oit-card-text">
                             <p id="major-4">Radiologic Science</p>
                         </div>
