--- a/views/pages/start.ejs
+++ b/views/pages/start.ejs
@@ -3,7 +3,7 @@
 <head>
     <%- include("head") %>
     <link rel="stylesheet" href="css/start.css">
-    <title>Document</title>
+    <title>Start page</title>
 </head>
 <body>
     <div class="scroll">
