Reworked some stuff
- Put update code into Update function
- Added promises to Update function to allow for responses within website instead of just console and notifications when update is complete, instead of just when it's starting.
(Think of the resolve(true/false); as a return true/false;)
- Updated Update function to actually store offline data when there is no internet connection
- Reworked related degree thing to make it save the correct stuff
- Reworked majors to expect key/value pairs. Speeds up page loads.
- Reworked Pages class to use key/value pairs
- Made many Get___Json() functions static. Makes it so you don't need to initialize a class just to use one.
- Updated buildings code to add images programmatically. Should work for up to 13 images, which admissions will probably never get to.
- Links page now has an update button that calls the Update function in main.js
- Small addition to majors page that hides next and previous buttons if there's only one image
- Added sorting by department to professor select. One problem is that it counts as a new page load when called.

--- a/views/pages/building.ejs
+++ b/views/pages/building.ejs
@@ -20,19 +20,18 @@
         <tr class="row m-auto">
             <% switch (images.length)
             {
-                case 4: %>
-                <td class="col-4 cover"><img src="images/Buildings/<%- cleanString(building.name) %>/<%- images[1] %>"></td>
-                <td class="col-4 cover"><img src="images/Buildings/<%- cleanString(building.name) %>/<%- images[2] %>"></td>
-                <td class="col-4 cover"><img src="images/Buildings/<%- cleanString(building.name) %>/<%- images[3] %>"></td>
-            <% break;
-                case 3: %>
-                <td class="col-6 cover"><img src="images/Buildings/<%- cleanString(building.name) %>/<%- images[1] %>"></td>
-                <td class="col-6 cover"><img src="images/Buildings/<%- cleanString(building.name) %>/<%- images[2] %>"></td>
-            <% break;
+                
                 case 2: %>
-                <td class="col-6 cover main"><img src="images/Buildings/<%- cleanString(building.name) %>/<%- images[0] %>"></td>
-                <td class="col-6 cover main"><img src="images/Buildings/<%- cleanString(building.name) %>/<%- images[1] %>"></td>
-            <% break;
+                    <td class="col-6 cover main"><img src="images/Buildings/<%- cleanString(building.name) %>/<%- images[0] %>"></td>
+                    <td class="col-6 cover main"><img src="images/Buildings/<%- cleanString(building.name) %>/<%- images[1] %>"></td>
+                <% break;
+                default:
+                    for (var i = 1; i < images.length; i++)
+                    { %>
+                        <td class="col-<%= 12 / (images.length - 1) %> cover"><img
+                                src="images/Buildings/<%- cleanString(building.name) %>/<%- images[i] %>"></td>
+                    <% }
+                    break;
             } %>
         </tr>
         <tr class="row m-auto">
