--- a/views/pages/major.ejs
+++ b/views/pages/major.ejs
@@ -21,12 +21,14 @@
                             <div class="slides">
                                 <img src="images/Majors/<%- cleanString(major.id) %>/<%- image %>" style="width:100%">
                             </div>
-                        <%
-                    }); %>
+                        <% });
                     
-                    <!-- Next and previous buttons -->
-                    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-                    <a class="next" onclick="plusSlides(1)">&#10095;</a>
+                    if (images.length > 1)
+                    { %>
+                        <!-- Next and previous buttons -->
+                        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+                        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+                    <% } %>
                 </td>
             </tr>
         <% } %>
