Testing out kiosk mode, added logos so they're not online

--- a/views/pages/nav.ejs
+++ b/views/pages/nav.ejs
@@ -20,7 +20,7 @@
     </div>
     
     <a class="navbar-brand" href="/">
-        <img src="https://www.oit.edu/themes/custom/oregontech/images/logo.png" alt="oit logo">
+        <img src="images/logo.png" alt="oit logo">
     </a>
 
     <div>
