--- a/views/pages/home_page.ejs
+++ b/views/pages/home_page.ejs
@@ -16,10 +16,10 @@
         <div id="page_banner">
             <tr class="row">
                 <td class="col-8">
-                    <img class="img-fluid" src="https://www.oit.edu/themes/custom/oregontech/images/logo.png">
+                    <img class="img-fluid" src="images/logo.png">
                 </td>
                 <td class="col-4">
-                    <img class="img-fluid" src="https://oregontechowls.com/images/main_logo.png">
+                    <img class="img-fluid" src="images/hootie_logo.png">
                 </td>
             </tr>
         </div>
