--- a/views/pages/links.ejs
+++ b/views/pages/links.ejs
@@ -27,6 +27,8 @@
         <hr/>
         <p><a href="major?page=aaaaaaaaa">404 major test</a></p>
         <p><a href="old_building_select">Old Building Select</a></p>
+        <hr/>
+        <p><a href="kill">Exit the kiosk</a></p>
     </div>
 <%- include("tail"); %>
 </body>
