--- a/views/pages/links.ejs
+++ b/views/pages/links.ejs
@@ -11,12 +11,12 @@
     <h1 class="title">Link Page</h1>
     <div>
         <% if (locals.message) { %> <p> <%= message %> </p> <% } %>
-        <p><a href="update">Update Kiosk Data</a></p>
+        <p><a href="request_update">Update Kiosk Data</a></p>
         <p><a href="start">Start page</a></p>
         <p><a href="home_page">Home Page</a></p>
         <hr/>
         <p><a href="building_select">Building Selector</a></p>
-        <p><a href="building?page=Purvine">Purvine Hall</a></p>
+        <p><a href="building?page=Purvine Hall">Purvine Hall</a></p>
         <hr/>
         <p><a href="major_select">Major Select</a></p>
         <p><a href="major?page=Software Engineering Technology">Software Engineering Technology</a></p>
@@ -26,7 +26,6 @@
         <p><a href="professor?page=Todd Breedlove">Professor Todd Breedlove</a></p>
         <hr/>
         <p><a href="major?page=aaaaaaaaa">404 major test</a></p>
-        <p><a href="old_building_select">Old Building Select</a></p>
         <hr/>
         <p><a href="kill">Exit the kiosk</a></p>
     </div>
