--- a/scss/main.scss
+++ b/scss/main.scss
@@ -32,6 +32,7 @@ html {
 
     // Disallow selecting of text for a better user experience on the kiosk
     user-select: none;
+    // cursor: none;
 }
 
 @include headings
@@ -96,6 +97,11 @@ html {
     margin-bottom: 2px;
     
     background-color: $oit_blue;
+
+    a:hover
+    {
+        color: white;
+    }
 
     *
     {
