--- a/views/pages/start.ejs
+++ b/views/pages/start.ejs
@@ -1,21 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <%- include("head") %>
-    <link rel="stylesheet" href="css/start.css">
-    <title>Start page</title>
+        <link rel="stylesheet" href="css/start.css">
+        <title>Start page</title>
 </head>
+
 <body>
     <div class="scroll">
-        <div><img src="images/Hootie-cutout.png"></div>
-        <div><img src="images/frog1.jpg"></div>
-        <div><img src="images/frog2.jpg"></div>
-        <div><img src="images/frog3.jpg"></div>
+        <% if (locals.images.length !=0) {
+            images.forEach(image=> { %>
+            <div><img src="images/Slides/<%- image %>"></div>
+            <% }) 
+        } %>
     </div>
     <footer>
-        <a href="/"><h1 class="click">Tap here to start!</h1></a>
+        <a href="/">
+            <h1 class="click">Tap here to start!</h1>
+        </a>
     </footer>
     <%- include("tail") %>
-    <script src="js/start.js"></script>
+        <script src="js/start.js"></script>
 </body>
+
 </html>
