--- a/views/pages/home_page.ejs
+++ b/views/pages/home_page.ejs
@@ -77,7 +77,7 @@
                 <h2>Get to know our staff & faculty!</h2>
             </td>
             <td class="col-6">
-                <h2>Learn our campus!</h2>
+                <h2>Learn about our campus!</h2>
             </td>
         </tr>
         <tr class="row" id="professors_heading">
