Quick fix for professor select page, removed unnecessary includes

--- a/views/pages/nav.ejs
+++ b/views/pages/nav.ejs
@@ -1,5 +1,5 @@
 <nav class="navbar fixed-bottom navbar-expand-sm navbar-dark bg-dark">
-    <div style="
+    <div id="back" style="
     cursor: pointer;
     
     font-size: 1.5em;
