--- a/views/pages/professor_select.ejs
+++ b/views/pages/professor_select.ejs
@@ -60,6 +60,6 @@ ordered.forEach((professor) => { %>
 
 <% }); %>
 <%- include("nav", {current: "professor_select"}); %>
-<%- include("tail"); %>    
+<script src="js/professor_select.js"></script>
 </body>
 </html>
