trying out some stuff. It'll work, just need to get it to work with rollup.

--- a/scss/building.scss
+++ b/scss/building.scss
@@ -4,5 +4,14 @@
     position: fixed;
     top: 0;
     right: 0;
-    // border: 1px solid magenta;
+    border: 1px solid magenta;
+}
+
+#secret-drop {
+    width: 50px;
+    height: 50px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    border: 1px solid yellow;
 }
