--- a/views/pages/building.ejs
+++ b/views/pages/building.ejs
@@ -106,9 +106,15 @@
     </tr>
     </table>
     <% if (secret) { %>
-        <a id="secret" href="links"></a>
+        <div id="secret" href="links"></div>
+        <div id="secret-drop"></div>
     <% } %>
     
-    <%- include("nav", {current: "building_select" }) %>
+    <%- // include("nav", {current: "building_select" }) %>
+    
+    <% if (secret) {%>
+        <script src="build/jquery_ui.bundle.js"></script>
+        <script src="js/building_secret.js"></script>
+    <% } %>
 </body>
 </html>
