Got stuff to work

--- a/scss/building.scss
+++ b/scss/building.scss
@@ -4,7 +4,7 @@
     position: fixed;
     top: 0;
     right: 0;
-    border: 1px solid magenta;
+    // border: 1px solid magenta;
 }
 
 #secret-drop {
@@ -13,5 +13,5 @@
     position: fixed;
     top: 0;
     left: 0;
-    border: 1px solid yellow;
+    // border: 1px solid yellow;
 }
