Some finishing touches before symposium

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -32,7 +32,7 @@ html {
 
     // Disallow selecting of text for a better user experience on the kiosk
     user-select: none;
-    // cursor: none;
+    cursor: none;
 }
 
 @include headings
