--- a/views/pages/building.ejs
+++ b/views/pages/building.ejs
@@ -106,7 +106,7 @@
     </tr>
     </table>
     <% if (secret) { %>
-        <div id="secret" href="links"></div>
+        <div id="secret"></div>
         <div id="secret-drop"></div>
     <% } %>
     
