--- a/views/pages/home_page.ejs
+++ b/views/pages/home_page.ejs
@@ -82,7 +82,7 @@
                 <a href="professor_select?sort=department">
                     <div class="oit-card" style="background-image: url('images/Hootie-cutout.png');">
                         <div class="oit-card-text">
-                            <p>Staff Directory</p>
+                            <p>Directory</p>
                         </div>
                     </div>
                 </a>
