--- a/views/pages/home_page.ejs
+++ b/views/pages/home_page.ejs
@@ -17,16 +17,16 @@
                 </td>
             </tr>
         </div>
-        <tr class="row" id="major_exploration">
+        <!-- <tr class="row" id="major_exploration">
             <td class="col-12">
                 <h1 text-align="center">
                     Get to know your options
                 </h1>
             </td>
-        </tr>
+        </tr> -->
         <tr class="row" id="popular_majors">
             <td class="col-12">
-                <h2 text-align="center">Our most Popular Majors</h2>
+                <h3 text-align="center">Our most Popular Majors</h3>
             </td>
         </tr>
         <tr class="row">
