--- a/views/pages/major_select.ejs
+++ b/views/pages/major_select.ejs
@@ -22,7 +22,7 @@
                     aria-expanded="false" aria-controls=".<%= categoryAsClass %>">
                     <div class="oit-card" style="background-image: url('images/Categories/<%= categoryAsClass %>/<%= images[categoryAsClass][0] %>')">
                         <div class="oit-card-text">
-                            <p> <%= category.title %> </p>
+                            <p><b><%= category.title %></b></p>
                         </div>
                     </div>
                 </div>
