More small things

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -110,6 +110,8 @@ html
 {
     padding: 5px 5px !important;
     margin-bottom: 2px;
+
+    height: 100vh;
     
     background-color: $oit_blue;
 
