--- a/views/pages/nav.ejs
+++ b/views/pages/nav.ejs
@@ -41,7 +41,7 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="professor_select">
+                <a class="nav-link" href="professor_select?sort=department">
                     Staff Directory
                 </a>
             </li>
