--- a/views/pages/tail.ejs
+++ b/views/pages/tail.ejs
@@ -1,3 +1,3 @@
 <script src="build/bootstrap.bundle.js"></script>
 <script src="js/main.js"></script>
-<!-- <script src="js/anti_burnin.js"></script> -->
+<script src="js/anti_burnin.js"></script>
