Changed navbar, hopefully works

--- a/views/pages/nav.ejs
+++ b/views/pages/nav.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar fixed-bottom navbar-expand-sm navbar-dark bg-dark">
+<nav class="navbar fixed-bottom navbar-dark bg-dark">
     <div id="back" style="
     cursor: pointer;
     
@@ -20,7 +20,7 @@
     </div>
     
     <a class="navbar-brand" href="/">
-        <img src="images/logo.png" alt="oit logo">
+        <img src="images/logo-white.png" alt="oit logo">
     </a>
 
     <div>
