npm audit, changed default sort for staff

--- a/views/pages/nav.ejs
+++ b/views/pages/nav.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar fixed-bottom navbar-dark bg-dark">
+<nav class="navbar fixed-bottom navbar-expand navbar-dark bg-dark">
     <div id="back" style="
     cursor: pointer;
     
@@ -41,7 +41,7 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="professor_select?sort=department">
+                <a class="nav-link" href="professor_select">
                     Staff Directory
                 </a>
             </li>
